# course-todo

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: course-todo-sync.service  course-todo-sync.timer
src/pku_todo/: bark.py  cli.py  config.py  models.py  paths.py  pku.py  state.py  sync.py  todoist.py
tests/: test_pku.py  test_sync.py
