[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pku-course-todo"
version = "0.1.0"
description = "Sync PKU course assignments to Todoist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pku_todo = "pku_todo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
